# whois

./: .gitignore  App.tsx  MACOS_INSTALL.md  README.md  README_CN.md  README_MACOS.md  README_WINDOWS.md  build_macos.sh  constants.tsx  index.html  metadata.json  package-lock.json  package.json  package_macos.sh  package_windows.ps1  scanner.rs  types.ts
.github/workflows/: release.yml
components/: Dashboard.tsx  HostCard.tsx
services/: geminiService.ts
src-tauri/: Cargo.toml  README_MACOS_BUILD.md  build_and_sign.sh  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/tests/: arp_test.rs  export_test.rs  mod.rs  network_test.rs  ping_test.rs  service_discovery_test.rs  service_type_test.rs
