[package]
name = "whois-scanner"
version = "1.0.0"
description = "Network scanner with CLI and GUI modes"
authors = ["Engineer"]
edition = "2021"

# 共享库
[lib]
name = "whois_scanner_lib"
path = "src/lib.rs"

# CLI 二进制
[[bin]]
name = "whois-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

# Tauri GUI 二进制
[[bin]]
name = "whois-gui"
path = "src/bin/tauri.rs"
required-features = ["gui"]

[build-dependencies]
tauri-build = { version = "1.5", features = [], optional = true }

[dependencies]
# 共享依赖
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
surge-ping = "0.8"
rand = "0.9"

# GUI 专用依赖
tauri = { version = "1.5", features = ["shell-open"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
serial_test = "3.0"

[features]
default = ["cli"]
cli = []
gui = ["tauri", "tauri-build"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = "z"
lto = true
